@@ -3931,6 +3931,10 @@ nvim_open_win({buffer}, {enter}, {config})                   *nvim_open_win()*
                   • _cmdline_offset: (EXPERIMENTAL) When provided, anchor the
                     |cmdline-completion| popupmenu to this window, with an
                     offset in screen cell width.
+                  • pinned: Prevent the window from being closed by commands
+                    like |:fclose| or |:only|. The window can only be closed
+                    when explicitly targeted. Immutable after creation.
+                    Default: false.
 
     Return: ~
         (`integer`) |window-ID|, or 0 on error
