@@ -4218,10 +4218,12 @@ static int frame_minwidth(frame_T *topfrp, win_T *next_curwin)
 /// Buffers in the other windows become hidden if 'hidden' is set, or '!' is
 /// used and the buffer was modified.
 ///
-/// Used by ":bdel" and ":only".
+/// Used by ":tabclose" and ":only".
 ///
-/// @param forceit  always hide all other windows
-void close_others(int message, int forceit)
+/// @param message       if true, display error messages
+/// @param forceit       always hide all other windows
+/// @param ignore_pinned if true, also close pinned floating windows (for :tabclose)
+void close_others(int message, int forceit, bool ignore_pinned)
 {
   win_T *const old_curwin = curwin;
 
@@ -4250,7 +4252,8 @@ void close_others(int message, int forceit)
       curbuf = curwin->w_buffer;
     }
 
-    if (wp == curwin) {                 // don't close current window
+    // don't close current window or pinned floating windows
+    if (wp == curwin || (wp->w_floating && wp->w_config.pinned && !ignore_pinned)) {
       continue;
     }
 
@@ -4282,7 +4285,17 @@ void close_others(int message, int forceit)
   }
 
   if (message && !ONE_WINDOW) {
-    emsg(_("E445: Other window contains changes"));
+    // Check if remaining windows are non-pinned
+    bool has_non_pinned = false;
+    for (win_T *wp = firstwin; wp != NULL; wp = wp->w_next) {
+      if (wp != curwin && !(wp->w_floating && wp->w_config.pinned)) {
+        has_non_pinned = true;
+        break;
+      }
+    }
+    if (has_non_pinned) {
+      emsg(_("E445: Other window contains changes"));
+    }
   }
 }
 
